# fastreq

./: Cargo.toml  README.md  body.json  config.json  go.mod  go.sum  h.json
cmd/: main.go
helper/: helper.go
src/: api.rs  api_client.rs  main.rs
types/: types.go
