[package]
name = "fastreq"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2"
